ADD: error response test

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #
 # give more memory
 #
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=1024m
+org.gradle.jvmargs=-Xmx5G -XX:MaxPermSize=1024m
 #
 # keep the daemon running
 #
