--- a/war-tasks/src/main/webapp/WEB-INF/web.xml
+++ b/war-tasks/src/main/webapp/WEB-INF/web.xml
@@ -10,30 +10,28 @@
   -->
   <session-config>
     <session-timeout>30</session-timeout>
-    <cookie-config>
-      <path>/</path>
-    </cookie-config>
+    <tracking-mode>URL</tracking-mode>
   </session-config>
 
+  <!-- Custom filter, allows to inject data during the processing the request/response -->
   <filter>
     <filter-name>PagesFilter</filter-name>
     <filter-class>com.tiro.PagesFilter</filter-class>
   </filter>
-
   <filter-mapping>
     <filter-name>PagesFilter</filter-name>
     <url-pattern>/*</url-pattern>
     <!--
-        The dispatcher has five legal values: FORWARD, REQUEST, INCLUDE, ASYNC, and ERROR.
+    The dispatcher has five legal values: FORWARD, REQUEST, INCLUDE, ASYNC, and ERROR.
 
-        A value of FORWARD means the Filter will be applied under RequestDispatcher.forward() calls.
-        A value of REQUEST means the Filter will be applied under ordinary client calls to the path or servlet.
-        A value of INCLUDE means the Filter will be applied under RequestDispatcher.include() calls.
-        A value of ASYNC means the Filter will be applied under calls dispatched from an AsyncContext.
-        A value of ERROR means the Filter will be applied under the error page mechanism.
+    A value of FORWARD means the Filter will be applied under RequestDispatcher.forward() calls.
+    A value of REQUEST means the Filter will be applied under ordinary client calls to the path or servlet.
+    A value of INCLUDE means the Filter will be applied under RequestDispatcher.include() calls.
+    A value of ASYNC means the Filter will be applied under calls dispatched from an AsyncContext.
+    A value of ERROR means the Filter will be applied under the error page mechanism.
 
-        The absence of any dispatcher elements in a filter-mapping indicates a default of applying filters only
-        under ordinary client calls to the path or servlet.
+    The absence of any dispatcher elements in a filter-mapping indicates a default of applying filters only
+    under ordinary client calls to the path or servlet.
     -->
     <dispatcher>REQUEST</dispatcher>
     <dispatcher>FORWARD</dispatcher>
@@ -53,4 +51,9 @@
       <trim-directive-whitespaces>true</trim-directive-whitespaces>
     </jsp-property-group>
   </jsp-config>
+
+  <welcome-file-list>
+    <welcome-file>/WEB-INF/pages/index.jsp</welcome-file>
+  </welcome-file-list>
+
 </web-app>
