FIX: linux failure on cleanup task call

--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ allprojects {
 /* CLEANUP ROOT PROJECT TOO. */
 task clean(type: Delete) {
   delete rootProject.buildDir
-  delete fileTree(dir: rootProject.rootDir, include: '**/*.log')
+  //delete fileTree(dir: rootProject.rootDir, include: '**/*.log')
 }
 
 /* BUILD TASKS EXECUTION TIME TRACKING */
