--- a/gradle.properties
+++ b/gradle.properties
@@ -18,12 +18,25 @@ org.gradle.configureondemand=true
 #
 # Solution Variables
 #
+# Jetty Version, latest release: 9.3.10.v20160621 or use '+'
+#
+JETTY_VERSION=9.3.10.v20160621
+#
+##
+#
 ## Allow TEST configurations in solution
+#
 USE_TDD=true
+#
 ## Allow code coverage tool usage in Tests
+#
 USE_JACOCO=true
 #
 # Solution Version
 #
 SOLUTION_VERSION_MAJOR=1.0
 SOLUTION_VERSION_MINOR=0
+#
+# Enable/Disable timing
+#
+BUILD_TIMING_TRACKING=false
