CHG: Improved testing ADD: sqlite dialect module created CHG: testing in WAR will use sqlite db

--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -41,6 +41,8 @@ dependencies {
   /* [ TESTING ] ==================================================================================================== */
   if (useTdd) {
 
+    testCompile project(':lib-sqlite-dialect')
+
     /* SQLite */
     testCompile 'org.xerial:sqlite-jdbc:+'
 
