--- a/ear-app/build.gradle
+++ b/ear-app/build.gradle
@@ -32,6 +32,13 @@ if (useJacoco) {
   jacoco {
     toolVersion = '+'
   }
+
+  test {
+    jacoco {
+      // change extension from *.exec to *.ec, otherwise codecov.io will not find the results
+      destinationFile = file("$rootProject.buildDir/jacoco/ear-app-jacoco.ec")
+    }
+  }
 }
 
 test {
