--- a/war-tasks/build.gradle
+++ b/war-tasks/build.gradle
@@ -56,6 +56,13 @@ if (useJacoco) {
   jacoco {
     toolVersion = '+'
   }
+
+  test {
+    jacoco {
+      // change extension from *.exec to *.ec, otherwise codecov.io will not find the results
+      destinationFile = file("$rootProject.buildDir/jacoco/war-tasks-jacoco.ec")
+    }
+  }
 }
 
 test {
