--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -82,6 +82,13 @@ if (useJacoco) {
   jacoco {
     toolVersion = '+'
   }
+
+  test {
+    jacoco {
+      // change extension from *.exec to *.ec, otherwise codecov.io will not find the results
+      destinationFile = file("$rootProject.buildDir/jacoco/lib-core-jacoco.ec")
+    }
+  }
 }
 
 test {
