--- a/lib-sqlite-dialect/build.gradle
+++ b/lib-sqlite-dialect/build.gradle
@@ -33,4 +33,11 @@ if (useJacoco) {
   jacoco {
     toolVersion = '+'
   }
+
+  test {
+    jacoco {
+      // change extension from *.exec to *.ec, otherwise codecov.io will not find the results
+      destinationFile = file("$rootProject.buildDir/jacoco/lib-sqlite-dialect-jacoco.ec")
+    }
+  }
 }
