--- a/war-api/build.gradle
+++ b/war-api/build.gradle
@@ -72,6 +72,13 @@ if (useJacoco) {
   jacoco {
     toolVersion = '+'
   }
+
+  test {
+    jacoco {
+      // change extension from *.exec to *.ec, otherwise codecov.io will not find the results
+      destinationFile = file("$rootProject.buildDir/jacoco/war-api-jacoco.ec")
+    }
+  }
 }
 
 test {
