--- a/war-time/build.gradle
+++ b/war-time/build.gradle
@@ -66,6 +66,13 @@ if (useJacoco) {
   jacoco {
     toolVersion = '+'
   }
+
+  test {
+    jacoco {
+      // change extension from *.exec to *.ec, otherwise codecov.io will not find the results
+      destinationFile = file("$rootProject.buildDir/jacoco/war-time-jacoco.ec")
+    }
+  }
 }
 
 test {
