ADD: xml reports generation added

--- a/ear-app/build.gradle
+++ b/ear-app/build.gradle
@@ -39,6 +39,12 @@ if (useJacoco) {
       destinationFile = file("$rootProject.buildDir/jacoco/ear-app-jacoco.ec")
     }
   }
+
+  jacocoTestReport {
+    reports {
+      xml.enabled true
+    }
+  }
 }
 
 test {
