--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ org.gradle.configureondemand=true
 #
 # Jetty Version, latest release: 9.3.10.v20160621 or use '+'
 #
-JETTY_VERSION=9.3.10.v20160621
+JETTY_VERSION=+
 #
 ##
 #
